# airportmikeg

./: .gitignore  CMakeLists.txt  MikeG Airlines.lnk  README.md  date.cpp  date.h  e  main.cpp
airport/: airport.cpp  airport.h  service.cpp  service.h  staff.cpp  staff.h  transport.cpp  transport.h
credentials/: admin.txt
data/: airports.txt  client.txt  company.txt  data.cpp  data.h  devlogs  devlogs.txt  flights.txt  planes.txt  service.txt  tickets.txt  users.txt  voyages.txt
docs/: Doxyfile
docs/output/html/: index.html
frontend/: admin.cpp  admin.h  client.cpp  client.h  clients.cpp  clients.h  company.cpp  company.h  data.cpp  data.h  mainmenu.cpp  mainmenu.h  menu.cpp  menu.h  mikeg.cpp  mikeg.h  user.h  worker.cpp  worker.h  workers.cpp  workers.h
passenger/: funcoes.cpp  funcoes.h  luggage.cpp  luggage.h  luggagetransport.cpp  luggagetransport.h  passenger.cpp  passenger.h  ticket.cpp  ticket.h
src/: airport.cpp  bst.h  crossplatform.h  data.cpp  data.h  date.cpp  date.h  exception.h  flight.cpp  flight.h  luggage.h  menu.cpp  plane.cpp  plane.h  pointer.cpp  pointer.h  service.h  sorter.cpp  sorter.h  ticket.h  user.h  voyage.h
voyage/: flight.cpp  flight.h  plane.cpp  plane.h  voyage.cpp  voyage.h
